nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    role: web
spec:
  containers:
  - name: nginx
    image: quay.io/satishchennu1/nginxopenshift:v2 
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
