route-nginx.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: nginx 
  name: nginx
spec:
  host: mynginx-nginx.apps.ocppoliot.ocpcontainer.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx
    weight: 100
